--- a/src/app/components/desktop/home/Home.css
+++ b/src/app/components/desktop/home/Home.css
@@ -68,7 +68,9 @@ header a {
   height: 100%;
   z-index: 500;
   position: absolute;
-  overflow: hidden; }
+  overflow: hidden;
+  background: -webkit-radial-gradient(center, circle cover, rgba(0, 2, 34, 0.65) 0%, rgba(0, 2, 34, 0) 50%);
+  background: radial-gradient(center, circle cover, rgba(0, 2, 34, 0.65) 0%, rgba(0, 2, 34, 0) 50%); }
   .home .headline h1 {
     text-align: center;
     color: #ffffff;
@@ -79,7 +81,7 @@ header a {
     .home .headline h1 svg {
       fill: #ffffff;
       overflow: visible;
-      filter: drop-shadow(0 0 10px rgba(0, 2, 34, 0.4)); }
+      filter: drop-shadow(0 0 10px rgba(0, 2, 34, 0.5)); }
       .home .headline h1 svg path {
         transform-origin: center center; }
   .home .headline h3 {
@@ -99,11 +101,28 @@ header a {
   z-index: 550;
   position: absolute;
   overflow: hidden; }
+  .home .copy .gradient {
+    width: 100vw;
+    height: 20vw;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 2, 34, 0);
+    background: -webkit-linear-gradient(top, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.65) 50%, rgba(0, 2, 34, 0.75) 100%);
+    background: linear-gradient(to bottom, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.65) 50%, rgba(0, 2, 34, 0.75) 100%);
+    z-index: 0; }
   .home .copy .content {
     text-align: center;
     padding-bottom: 50px; }
     @media (max-width: 1200px) {
       .home .copy .content {
         padding-bottom: 30px; } }
+    .home .copy .content h2 {
+      color: #ffffff;
+      text-transform: uppercase;
+      font-size: 30px;
+      line-height: 34px;
+      letter-spacing: 3px; }
     .home .copy .content p {
       color: #CCCCCC; }
