--- a/src/app/components/desktop/projects/controls/Controls.css
+++ b/src/app/components/desktop/projects/controls/Controls.css
@@ -2,17 +2,23 @@
   position: absolute;
   z-index: 100;
   height: 100vh;
-  width: 70px;
-  right: 22px; }
+  width: 100px;
+  right: 0;
+  background: rgba(0, 2, 34, 0);
+  background: -webkit-linear-gradient(left, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.5) 75%);
+  background: linear-gradient(to right, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.5) 75%); }
   .controls > div .arrow {
     display: block;
     cursor: pointer;
     line-height: 15px;
     margin: 5px 0;
-    color: #adadba;
-    font-size: 30px; }
+    color: #ccc;
+    font-size: 36px;
+    transform: scale(0.75);
+    transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
     .controls > div .arrow:hover {
-      color: #ffffff; }
+      color: #ff234a;
+      transform: scale(1); }
   .controls > div .slider {
     flex-grow: 1;
     height: 250px; }
