--- a/src/app/components/desktop/projects/controls/Controls.scss
+++ b/src/app/components/desktop/projects/controls/Controls.scss
@@ -1,17 +1,30 @@
 @import 'app/styles/colors.scss';
+@import 'app/styles/mixins.scss';
+@import 'app/styles/transition.scss';
+
+// $control-off-color: #adadba;
+// $control-hover-color: $white;
 
 
-$control-off-color: #adadba;
-$control-hover-color: $white;
+
+$control-color-1: rgba(255, 35, 74, 1);
+$control-color-2: rgba(223, 153, 183, 1);
+
+$control-off-color: #ccc;
+$control-hover-color: $control-color-1;
 
 .controls{
 	position: absolute;
 	z-index: 100;
 	height: 100vh;
-	width: 70px;
-	right:22px;
+	width: 100px;
+	right:0;
+	@include linear-gradient(to right, rgba($black,0) 0%, rgba($black,.5) 75%);
 
 	&>div{
+		// border: 2px solid $primary-color;
+		// padding: 5px;
+		// background: $primary-color;
 
 		.arrow{
 			display: block;
@@ -21,10 +34,14 @@ $control-hover-color: $white;
 
 			color: $control-off-color;
 
-			font-size: 30px;
+			font-size: 36px;
+
+			transform: scale(.75);
+			transition: all $transition-speed $transition-ease;
 
 			&:hover{
 				color: $control-hover-color;
+				transform: scale(1);
 			}
 
 			// svg{
