--- a/src/app/components/desktop/projects/controls/slider/Slider.css
+++ b/src/app/components/desktop/projects/controls/slider/Slider.css
@@ -2,17 +2,23 @@
   position: absolute;
   z-index: 100;
   height: 100vh;
-  width: 70px;
-  right: 22px; }
+  width: 100px;
+  right: 0;
+  background: rgba(0, 2, 34, 0);
+  background: -webkit-linear-gradient(left, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.5) 75%);
+  background: linear-gradient(to right, rgba(0, 2, 34, 0) 0%, rgba(0, 2, 34, 0.5) 75%); }
   .controls > div .arrow {
     display: block;
     cursor: pointer;
     line-height: 15px;
     margin: 5px 0;
-    color: #adadba;
-    font-size: 30px; }
+    color: #ccc;
+    font-size: 36px;
+    transform: scale(0.75);
+    transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
     .controls > div .arrow:hover {
-      color: #ffffff; }
+      color: #ff234a;
+      transform: scale(1); }
   .controls > div .slider {
     flex-grow: 1;
     height: 250px; }
@@ -32,33 +38,42 @@
       display: block;
       height: 100%;
       width: 2px;
-      background-image: linear-gradient(rgba(255, 255, 255, 0.5) 10%, rgba(255, 255, 255, 0) 0%);
-      background-position: right;
-      background-size: 1px 7px;
-      background-repeat: repeat-y;
-      opacity: .75;
+      opacity: .3;
+      background: #ff234a;
+      background: -webkit-linear-gradient(bottom, #ff234a, #df99b7);
+      background: linear-gradient(to top, #ff234a, #df99b7);
       transition: opacity 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
   .slider.panel-open .rail::after {
-    opacity: 1; }
+    opacity: .65; }
   .slider .handle {
     width: 50px;
     height: 50px;
     position: absolute;
     top: 0;
     font-size: 50px;
-    color: #adadba;
-    cursor: move;
+    color: #ccc;
+    cursor: pointer;
     transition: all 0.8s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
-    .slider .handle.react-draggable-dragging {
-      transition: none; }
     .slider .handle .ic {
       width: 50px;
-      height: 50px; }
+      height: 50px;
+      transform: scale(0.85);
+      transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
     .slider .handle .ib {
-      color: #adadba; }
+      background: linear-gradient(140deg, #aaa 0%, #ffffff 40%, #ffffff 60%, #aaa 100%);
+      border-radius: 50%;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      color: transparent;
+      box-shadow: 0 0 20px rgba(0, 2, 34, 0.35);
+      transition: all 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
     .slider .handle .if {
       color: #2d345c; }
     .slider .handle:hover .ib {
-      color: #ffffff; }
+      background: linear-gradient(140deg, #ffffff 50%, #ccc 100%);
+      box-shadow: 0 0 20px rgba(0, 2, 34, 0.65); }
+    .slider .handle.react-draggable-dragging {
+      transition: none; }
+      .slider .handle.react-draggable-dragging .ic {
+        transform: scale(1); }
   .slider.loading .handle {
     transition: none !important; }
