--- a/src/app/components/desktop/projects/panel/Panel.css
+++ b/src/app/components/desktop/projects/panel/Panel.css
@@ -90,9 +90,21 @@ header a {
       width: 100%;
       transform-origin: 50% center;
       position: relative;
-      overflow: hidden;
       transform: scale(0.75);
       transition: all 1s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
+      .panel ul li .gradient {
+        position: absolute;
+        width: 100vw;
+        height: 100vw;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: -webkit-radial-gradient(center, circle cover, rgba(0, 2, 34, 0.7) 0%, rgba(0, 2, 34, 0) 65%);
+        background: radial-gradient(center, circle cover, rgba(0, 2, 34, 0.7) 0%, rgba(0, 2, 34, 0) 65%);
+        z-index: 1;
+        opacity: 0.01;
+        filter: alpha(opacity=1);
+        transition: opacity 0.4s cubic-bezier(0.2, 0.3, 0.25, 0.9); }
       .panel ul li .copy {
         width: 100%;
         height: 100%;
@@ -146,6 +158,9 @@ header a {
       .panel ul li.focus {
         height: 400px;
         transform: scale(1); }
+        .panel ul li.focus .gradient {
+          opacity: 1;
+          filter: alpha(opacity=100); }
         .panel ul li.focus .copy {
           color: #ffffff;
           transform: translateY(-35px); }
@@ -155,8 +170,8 @@ header a {
             filter: alpha(opacity=100); }
         .panel ul li.focus .ta {
           transform: translateY(75px);
-          opacity: 0.15;
-          filter: alpha(opacity=15); }
+          opacity: 0.35;
+          filter: alpha(opacity=35); }
   .panel.animate-enter {
     opacity: .01; }
   .panel.animate-enter.animate-enter-active {
