--- a/src/app/components/project/copy/solve/Solve.css
+++ b/src/app/components/project/copy/solve/Solve.css
@@ -1,3 +1,68 @@
+body {
+  font-family: "museo-slab", serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #000222; }
+  @media (max-width: 500px) {
+    body {
+      font-size: 16px;
+      line-height: 24px; } }
+
+.reverse-text {
+  color: #ffffff; }
+
+h1, h2, h3 {
+  font-family: "museo-sans", sans-serif;
+  letter-spacing: 1.5px; }
+
+h4, h5, h6 {
+  font-family: "museo-slab", serif;
+  letter-spacing: 1px; }
+
+h1 {
+  font-size: 58px; }
+
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  letter-spacing: 0px;
+  line-height: 40px; }
+  @media (max-width: 1025px) {
+    h2 {
+      font-size: 38px;
+      line-height: 44px; } }
+  @media (max-width: 500px) {
+    h2 {
+      font-size: 28px;
+      line-height: 36px; } }
+
+h3 {
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h3 {
+      font-size: 21px; } }
+
+h4 {
+  font-weight: 100;
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h4 {
+      font-size: 21px; } }
+
+a:hover {
+  text-decoration: none; }
+
+header a {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1.2; }
+
+.button {
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  font-family: "museo-sans", sans-serif; }
+
 .mobile-details-copy .solve {
   background: #142544;
   background: -webkit-linear-gradient(top, #142544 0%, #2f0d29 100%);
@@ -57,7 +122,8 @@
             transform: translateX(0);
             max-height: 1000px; } }
         .mobile-details-copy .solve .group .details > div h4 {
-          text-align: left; }
+          text-align: left;
+          font-family: "museo-slab", serif; }
           @media (max-width: 769px) {
             .mobile-details-copy .solve .group .details > div h4 {
               text-align: center; } }
