--- a/src/app/components/project/header/Header.css
+++ b/src/app/components/project/header/Header.css
@@ -1,3 +1,68 @@
+body {
+  font-family: "museo-slab", serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #000222; }
+  @media (max-width: 500px) {
+    body {
+      font-size: 16px;
+      line-height: 24px; } }
+
+.reverse-text {
+  color: #ffffff; }
+
+h1, h2, h3 {
+  font-family: "museo-sans", sans-serif;
+  letter-spacing: 1.5px; }
+
+h4, h5, h6 {
+  font-family: "museo-slab", serif;
+  letter-spacing: 1px; }
+
+h1 {
+  font-size: 58px; }
+
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  letter-spacing: 0px;
+  line-height: 40px; }
+  @media (max-width: 1025px) {
+    h2 {
+      font-size: 38px;
+      line-height: 44px; } }
+  @media (max-width: 500px) {
+    h2 {
+      font-size: 28px;
+      line-height: 36px; } }
+
+h3 {
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h3 {
+      font-size: 21px; } }
+
+h4 {
+  font-weight: 100;
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h4 {
+      font-size: 21px; } }
+
+a:hover {
+  text-decoration: none; }
+
+header a {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1.2; }
+
+.button {
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  font-family: "museo-sans", sans-serif; }
+
 .mobile-detail-header {
   position: relative;
   overflow: hidden;
@@ -44,11 +109,17 @@
     .mobile-detail-header .description h3 {
       color: #ffffff;
       text-transform: uppercase;
-      letter-spacing: 5px;
-      margin-top: 10px; }
+      letter-spacing: 3px;
+      margin-top: 10px;
+      font-family: "museo-slab", serif;
+      font-size: 30px; }
+      @media (max-width: 769px) {
+        .mobile-detail-header .description h3 {
+          font-size: 22px;
+          line-height: 26px; } }
     .mobile-detail-header .description p {
       color: #CCCCCC;
-      margin-top: 20px; }
+      margin-top: 15px; }
       @media (max-width: 769px) {
         .mobile-detail-header .description p {
           display: none; } }
