--- a/src/app/components/project/other/Other.css
+++ b/src/app/components/project/other/Other.css
@@ -1,3 +1,68 @@
+body {
+  font-family: "museo-slab", serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 28px;
+  color: #000222; }
+  @media (max-width: 500px) {
+    body {
+      font-size: 16px;
+      line-height: 24px; } }
+
+.reverse-text {
+  color: #ffffff; }
+
+h1, h2, h3 {
+  font-family: "museo-sans", sans-serif;
+  letter-spacing: 1.5px; }
+
+h4, h5, h6 {
+  font-family: "museo-slab", serif;
+  letter-spacing: 1px; }
+
+h1 {
+  font-size: 58px; }
+
+h2 {
+  font-size: 36px;
+  font-weight: 900;
+  letter-spacing: 0px;
+  line-height: 40px; }
+  @media (max-width: 1025px) {
+    h2 {
+      font-size: 38px;
+      line-height: 44px; } }
+  @media (max-width: 500px) {
+    h2 {
+      font-size: 28px;
+      line-height: 36px; } }
+
+h3 {
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h3 {
+      font-size: 21px; } }
+
+h4 {
+  font-weight: 100;
+  font-size: 24px; }
+  @media (max-width: 500px) {
+    h4 {
+      font-size: 21px; } }
+
+a:hover {
+  text-decoration: none; }
+
+header a {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1.2; }
+
+.button {
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  font-family: "museo-sans", sans-serif; }
+
 .other .gradient {
   height: 4px;
   background: #ff234a;
@@ -53,10 +118,10 @@
       text-align: center;
       color: #ffffff;
       text-transform: uppercase;
-      font-weight: 600;
       letter-spacing: 5px;
       margin-top: 10px;
-      font-size: 22px; }
+      font-size: 22px;
+      font-family: "museo-slab", serif; }
     .other .item .copy .hover {
       margin-top: 20px;
       max-height: 0px;
